Scroolbar and Heading

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
           </div>
         </div>
         <!-- END Head-->
+        <h1 class="p-relative">Dashboard</h1>
       </div>
     </div>
   </body>
