--- a/index.html
+++ b/index.html
@@ -108,6 +108,37 @@
         </div>
         <!-- END Head-->
         <h1 class="p-relative">Dashboard</h1>
+        <!-- Start Wrapper -->
+        <div class="wrapper d-grid gap-20">
+          <div class="welcome bg-white rad-10 txt-c-mobile block-mobile">
+            <div class="intro d-flex space-between p-20 bg-eee">
+              <div>
+                <h2 class="m-0">Welcome</h2>
+                <p class="c-grey mt-5">SAMI</p>
+              </div>
+              <img class="hide-mobile" src="imgs/welcome.png" alt="" />
+            </div>
+            <img src="imgs/avatar.png" alt="" class="avatar" />
+            <div class="body d-flex txt-c p-20 mt-20 mb-20 d-block-mobile">
+              <div>
+                SAMI KAIDI
+                <span class="d-block c-grey fs-14 mt-10">Developer</span>
+              </div>
+              <div>
+                80 <span class="d-block c-grey fs-14 mt-10">Projects</span>
+              </div>
+              <div>
+                $8500 <span class="d-block c-grey fs-14 mt-10">Earned</span>
+              </div>
+            </div>
+            <a
+              href="profle.html"
+              class="visit d-block fs-14 rad-6 bg-blue c-white w-fit"
+              >Profile</a
+            >
+          </div>
+          <!-- End Wrapper -->
+        </div>
       </div>
     </div>
   </body>
