Finised the Widget Two -Quick Draft-

--- a/index.html
+++ b/index.html
@@ -133,11 +133,35 @@
             </div>
             <a
               href="profle.html"
-              class="visit d-block fs-14 rad-6 bg-blue c-white w-fit"
+              class="visit d-block fs-14 bg-blue c-white w-fit btn-shape"
               >Profile</a
             >
           </div>
           <!-- End Wrapper -->
+
+          <!-- Start Quick Draft -->
+          <div class="quick-draft bg-white rad-10 p-20">
+            <h2 class="mt-0 mb-10">Quick Draft</h2>
+            <p class="mt-0 mb-20">Write A Draft For Your Ideas</p>
+            <form>
+              <input
+                class="d-block w-full p-10 mb-20 rad-6 bg-eee b-none"
+                type="text"
+                placeholder="Title"
+              />
+              <textarea
+                class="b-none p-10 rad-6 bg-eee w-full h-180 mb-20 no-resize"
+                name=""
+                placeholder="Your Thoughts"
+              ></textarea>
+            </form>
+            <input
+              class="visit d-block fs-14 bg-blue c-white w-fit b-none ml-auto btn-shape"
+              type="submit"
+              value="save"
+            />
+          </div>
+          <!-- End Quick Draft -->
         </div>
       </div>
     </div>
