--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <h1 class="p-relative">Dashboard</h1>
         <!-- Start Wrapper -->
         <div class="wrapper d-grid gap-20">
+          <!-- Start Welcome widget -->
           <div class="welcome bg-white rad-10 txt-c-mobile block-mobile">
             <div class="intro d-flex space-between p-20 bg-eee">
               <div>
@@ -137,7 +138,7 @@
               >Profile</a
             >
           </div>
-          <!-- End Wrapper -->
+          <!-- End Welcome widget -->
 
           <!-- Start Quick Draft -->
           <div class="quick-draft bg-white rad-10 p-20">
@@ -162,7 +163,58 @@
             />
           </div>
           <!-- End Quick Draft -->
+
+          <!-- Start Targets Sectoin -->
+          <div class="targets bg-white rad-10 p-20">
+            <h2 class="mt-0 mb-10">Yearly Targets</h2>
+            <p class="mt-0 mb-20 fs-15 c-grey">Targets Of The Year</p>
+            <div class="target-row mb-20 center-flex blue">
+              <div class="icon center-flex">
+                <i class="fa-solid fa-dollar-sign fa-lg c-blue"></i>
+              </div>
+              <div class="details">
+                <span class="fs-14 c-grey">Money</span>
+                <span class="d-block mt-5 mb-10 fw-bold">$20.000</span>
+                <div class="progress p-relative">
+                  <span class="bg-blue blue" style="width: 80%"
+                    ><span class="bg-blue c-white">80%</span></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="target-row mb-20 center-flex orange">
+              <div class="icon center-flex">
+                <i class="fa-solid fa-code fa-lg c-orange"></i>
+              </div>
+              <div class="details">
+                <span class="fs-14 c-grey">Projects</span>
+                <span class="d-block mt-5 mb-10 fw-bold">24</span>
+                <div class="progress p-relative">
+                  <span class="bg-orange orange" style="width: 55%"
+                    ><span class="bg-orange c-white">55%</span></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="target-row mb-20 center-flex green">
+              <div class="icon center-flex">
+                <i class="fa-solid fa-user fa-lg c-green"></i>
+              </div>
+              <div class="details">
+                <span class="fs-14 c-grey">Team</span>
+                <span class="d-block mt-5 mb-10 fw-bold">12</span>
+                <div class="progress p-relative">
+                  <span class="bg-green green" style="width: 75%"
+                    ><span class="bg-green c-white">75%</span></span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- End Targets Sectoin -->
         </div>
+        <!-- End Wrapper -->
       </div>
     </div>
   </body>
