Finished the ticket section

--- a/index.html
+++ b/index.html
@@ -211,8 +211,40 @@
               </div>
             </div>
           </div>
-
           <!-- End Targets Sectoin -->
+
+          <!-- Start Tickets Section -->
+          <div class="tickets bg-white rad-10 p-20">
+            <h2 class="mt-0 mb-10">Tickets Statistics</h2>
+            <p class="mt-0 mb-20 fs-15 c-grey">
+              Everything About Support Tickets
+            </p>
+            <div class="d-flex f-wrap gap-20 fs-13 c-grey">
+              <div class="box txt-c rad-10 p-20">
+                <i
+                  class="fa-regular fa-rectangle-list fa-2x mb-10 c-orange"
+                ></i>
+                <span class="d-block mb-5 fw-bold fs-25 c-black">2500</span>
+                Panding
+              </div>
+              <div class="box txt-c rad-10 p-20">
+                <i class="fa-solid fa-spinner fa-2x mb-20 c-blue"></i>
+                <span class="d-block mb-5 fw-bold fs-25 c-black">500</span>
+                Panding
+              </div>
+              <div class="box txt-c rad-10 p-20">
+                <i class="fa-solid fa-circle-check fa-2x mb-20 c-green"></i>
+                <span class="d-block mb-5 fw-bold fs-25 c-black">1900</span>
+                Panding
+              </div>
+              <div class="box txt-c rad-10 p-20">
+                <i class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-red"></i>
+                <span class="d-block mb-5 fw-bold fs-25 c-black">100</span>
+                Panding
+              </div>
+            </div>
+          </div>
+          <!-- End Tickets Section -->
         </div>
         <!-- End Wrapper -->
       </div>
