Finised the News Section

--- a/index.html
+++ b/index.html
@@ -245,6 +245,52 @@
             </div>
           </div>
           <!-- End Tickets Section -->
+
+          <!-- News Section Start-->
+          <div class="news sectoin">
+            <h2 class="m-0 mb-20">Latest News</h2>
+            <div class="news-row d-flex align-center txt-c-mobile">
+              <img class="w-100 rad-6 mr-15" src="imgs/news-01.png" alt="" />
+              <div class="info">
+                <h3 class="mt-0 mb-10 fs-16">Created SASS Section</h3>
+                <p class="c-grey fs-14 m-0">News SASS Examples & Tutorials</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-13 w-fit ml-auto">
+                3 Days Ago
+              </div>
+            </div>
+            <div class="news-row d-flex align-center txt-c-mobile">
+              <img class="w-100 rad-6 mr-15" src="imgs/news-02.png" alt="" />
+              <div class="info">
+                <h3 class="mt-0 mb-10">Changed The Design</h3>
+                <p class="c-grey fs-14 m-0">A Brand New Website Design</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-14 w-fit ml-auto">
+                3 Days Ago
+              </div>
+            </div>
+            <div class="news-row d-flex align-center txt-c-mobile">
+              <img class="w-100 rad-6 mr-15" src="imgs/news-03.png" alt="" />
+              <div class="info">
+                <h3 class="mt-0 mb-10">Team Increased</h3>
+                <p class="c-grey fs-14 m-0">3 Developers Joined The Team</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-14 w-fit ml-auto">
+                3 Days Ago
+              </div>
+            </div>
+            <div class="news-row d-flex align-center txt-c-mobile">
+              <img class="w-100 rad-6 mr-15" src="imgs/news-04.png" alt="" />
+              <div class="info">
+                <h3 class="mt-0 mb-10">Added Payment Gateway</h3>
+                <p class="c-grey fs-14 m-0">Many New Payment Gateways Added</p>
+              </div>
+              <div class="label btn-shape bg-eee fs-14 w-fit ml-auto">
+                3 Days Ago
+              </div>
+            </div>
+          </div>
+          <!-- News Section End-->
         </div>
         <!-- End Wrapper -->
       </div>
