Finished the Task section

--- a/index.html
+++ b/index.html
@@ -291,6 +291,65 @@
             </div>
           </div>
           <!-- News Section End-->
+
+          <!-- Tasks Section Start -->
+          <div class="tasks sectoin">
+            <h2 class="m-0 mb-20">Latest Tasks</h2>
+            <div class="row d-flex align-center">
+              <div class="info">
+                <h3 class="mt-0 mb-5 fs-15">Record One New Video</h3>
+                <p class="fs-16 c-grey m-0">Record Python Create Exe Project</p>
+              </div>
+              <div class="shape ml-auto">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+            <div class="row d-flex align-center">
+              <div class="info">
+                <h3 class="mt-0 mb-5 fs-15">Write Article</h3>
+                <p class="fs-16 c-grey m-0">
+                  Write Low Level vs High Level Languages
+                </p>
+              </div>
+              <div class="shape ml-auto">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+            <div class="row d-flex align-center">
+              <div class="info">
+                <h3 class="mt-0 mb-5 fs-15">Finish Project</h3>
+                <p class="fs-16 c-grey m-0">
+                  Publish Academy Programming Project
+                </p>
+              </div>
+              <div class="shape ml-auto">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+            <div class="row d-flex align-center opacity-5">
+              <div class="info">
+                <h3 class="mt-0 mb-5 fs-15 c-grey txt-line">
+                  Attend The Meeting
+                </h3>
+                <p class="fs-16 c-grey m-0 c-eee txt-line">
+                  Attend The Project Business Analysis Meeting
+                </p>
+              </div>
+              <div class="shape ml-auto">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+            <div class="row d-flex align-center">
+              <div class="info">
+                <h3 class="mt-0 mb-5 fs-15">Finish Lesson</h3>
+                <p class="fs-16 c-grey m-0">Finish Teaching Flex Box</p>
+              </div>
+              <div class="shape ml-auto">
+                <i class="fa-regular fa-trash-can"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Tasks Section End -->
         </div>
         <!-- End Wrapper -->
       </div>
