Finished the Top search section + add some hover effects

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <!-- End Welcome widget -->
 
           <!-- Start Quick Draft -->
-          <div class="quick-draft bg-white rad-10 p-20">
+          <div class="quick-draft section">
             <h2 class="mt-0 mb-10">Quick Draft</h2>
             <p class="mt-0 mb-20">Write A Draft For Your Ideas</p>
             <form>
@@ -165,7 +165,7 @@
           <!-- End Quick Draft -->
 
           <!-- Start Targets Sectoin -->
-          <div class="targets bg-white rad-10 p-20">
+          <div class="targets section">
             <h2 class="mt-0 mb-10">Yearly Targets</h2>
             <p class="mt-0 mb-20 fs-15 c-grey">Targets Of The Year</p>
             <div class="target-row mb-20 center-flex blue">
@@ -214,7 +214,7 @@
           <!-- End Targets Sectoin -->
 
           <!-- Start Tickets Section -->
-          <div class="tickets bg-white rad-10 p-20">
+          <div class="tickets section">
             <h2 class="mt-0 mb-10">Tickets Statistics</h2>
             <p class="mt-0 mb-20 fs-15 c-grey">
               Everything About Support Tickets
@@ -247,7 +247,7 @@
           <!-- End Tickets Section -->
 
           <!-- News Section Start-->
-          <div class="news sectoin">
+          <div class="news section">
             <h2 class="m-0 mb-20">Latest News</h2>
             <div class="news-row d-flex align-center txt-c-mobile">
               <img class="w-100 rad-6 mr-15" src="imgs/news-01.png" alt="" />
@@ -293,10 +293,10 @@
           <!-- News Section End-->
 
           <!-- Tasks Section Start -->
-          <div class="tasks sectoin">
+          <div class="tasks section">
             <h2 class="m-0 mb-20">Latest Tasks</h2>
             <div class="row d-flex align-center">
-              <div class="info">
+              <div class="info ml-5">
                 <h3 class="mt-0 mb-5 fs-15">Record One New Video</h3>
                 <p class="fs-16 c-grey m-0">Record Python Create Exe Project</p>
               </div>
@@ -305,7 +305,7 @@
               </div>
             </div>
             <div class="row d-flex align-center">
-              <div class="info">
+              <div class="info ml-5">
                 <h3 class="mt-0 mb-5 fs-15">Write Article</h3>
                 <p class="fs-16 c-grey m-0">
                   Write Low Level vs High Level Languages
@@ -316,7 +316,7 @@
               </div>
             </div>
             <div class="row d-flex align-center">
-              <div class="info">
+              <div class="info ml-5">
                 <h3 class="mt-0 mb-5 fs-15">Finish Project</h3>
                 <p class="fs-16 c-grey m-0">
                   Publish Academy Programming Project
@@ -327,7 +327,7 @@
               </div>
             </div>
             <div class="row d-flex align-center opacity-5">
-              <div class="info">
+              <div class="info ml-5">
                 <h3 class="mt-0 mb-5 fs-15 c-grey txt-line">
                   Attend The Meeting
                 </h3>
@@ -340,7 +340,7 @@
               </div>
             </div>
             <div class="row d-flex align-center">
-              <div class="info">
+              <div class="info ml-5">
                 <h3 class="mt-0 mb-5 fs-15">Finish Lesson</h3>
                 <p class="fs-16 c-grey m-0">Finish Teaching Flex Box</p>
               </div>
@@ -350,6 +350,40 @@
             </div>
           </div>
           <!-- Tasks Section End -->
+
+          <!-- Top Search Section Start -->
+          <div class="top-search section">
+            <h2 class="m-0 mb-20 fs-25">Top Search Items</h2>
+            <div class="head-items d-flex space-between c-grey mb-20">
+              <div>keyword</div>
+              <div>search count</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">Programming</div>
+              <div class="btn-shape fs-14 bg-eee">220</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">JaveScript</div>
+              <div class="btn-shape fs-14 bg-eee">180</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">PHP</div>
+              <div class="btn-shape fs-14 bg-eee">160</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">Code</div>
+              <div class="btn-shape fs-14 bg-eee">140</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">Design</div>
+              <div class="btn-shape fs-14 bg-eee">110</div>
+            </div>
+            <div class="between-flex ptb-15">
+              <div class="div">Logic</div>
+              <div class="btn-shape fs-14 bg-eee">95</div>
+            </div>
+          </div>
+          <!-- Top Search Section End -->
         </div>
         <!-- End Wrapper -->
       </div>
